--- a/lecssdujeu.css
+++ b/lecssdujeu.css
@@ -9,6 +9,7 @@ body {
 /* les différentes boites*/
 
 
+
 .box2{
   background-color: #000000;
   width: 50px;
@@ -39,14 +40,18 @@ body {
 
 .box4{
   background-color: #000000;
-  width: 300px;
+  width: 330px;
   border: 5px solid white;
   border-radius: 10px;
   padding: 59px;
   position: absolute;
   top: 560px;
   left: 590px;
-  text-align: center;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   opacity: 0.75
 }
 
@@ -328,6 +333,66 @@ visibility: visible;
   position: absolute;
   top: 158px;
   left: 45px;
+  z-index: 3;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  opacity: 0.75;
+}
+
+#btnJustin{
+  background: #000000;
+  color: #FFFFFF;
+  border-radius: 0.4em;
+  padding: 15px;
+  width: 150px;
+  height: 0.5%;
+  
+  position: absolute;
+  top:  565px;
+  left: 595px;
+  z-index: 3;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  opacity: 0.75;
+}
+
+#btnKevin{
+  background: #000000;
+  color: #FFFFFF;
+  border-radius: 0.4em;
+  padding: 15px;
+  width: 150px;
+  height: 0.5%;
+  
+  position: absolute;
+  top:  565px;
+  left: 743px;
+  z-index: 3;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  opacity: 0.75;
+}
+
+#btnVentux{
+  background: #000000;
+  color: #FFFFFF;
+  border-radius: 0.4em;
+  padding: 15px;
+  width: 150px;
+  height: 0.5%;
+  
+  position: absolute;
+  top:  565px;
+  left: 892px;
   z-index: 3;
 
   display: flex;
