--- a/lecssdujeu.css
+++ b/lecssdujeu.css
@@ -499,6 +499,7 @@ visibility: visible;
   align-items: center;
 
   opacity: 0.75;
+  visibility: visible;
 }
 
 #btnKevin{
@@ -519,6 +520,7 @@ visibility: visible;
   align-items: center;
 
   opacity: 0.75;
+  visibility: visible;
 }
 
 #btnVentux{
@@ -539,6 +541,7 @@ visibility: visible;
   align-items: center;
 
   opacity: 0.75;
+  visibility: visible;
 }
 
 #btnMoun{
@@ -559,6 +562,7 @@ visibility: visible;
   align-items: center;
 
   opacity: 0.75;
+  visibility: visible;
 }
 /* */
 
